--- a/README.html
+++ b/README.html
@@ -388,14 +388,22 @@ summary {
 <h3>Clases y contenido</h3>
 <p><a href="link">Clase 1 - Conceptos Principales de EPH:</a></p>
 <ul>
+<li>Temas de clase:
+<ul>
 <li>Presentación del curso.</li>
 <li>Presentación de la Encuesta Permanente de Hogares: Lineamientos conceptuales y metodología</li>
 <li>Abordaje del marco teórico y analítico de la EPH y sus aplicaciones prácticas.</li>
 <li>Síntesis del operativo de campo, cobertura y periodicidad de la Encuesta</li>
 <li>Definiciones de las principales variables de interés a abordar en el curso: Condición de actividad, categoría ocupacional, precariedad y pobreza</li>
 <li>Metodología usuaria de las Bases de microdatos. Utilización del Diseño de Registro.</li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 2 – Introduciendo a R:</a></p>
+<ul>
+<li>Temas de clase:
 <ul>
 <li>Descripción del programa “R”. Lógica sintáctica del lenguaje y comandos básicos</li>
 <li>Presentación de la plataforma RStudio para trabajar en “R”</li>
@@ -404,8 +412,14 @@ summary {
 <li>Definición de Objetos: Valores, Vectores y DataFrames</li>
 <li>Tipos de variable (numérica, de caracteres, lógicas)</li>
 <li>Lectura y Escritura de Archivos</li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 3 – Trabajando con bases de datos y Mercado de Trabajo:</a></p>
+<ul>
+<li>Temas de clase:
 <ul>
 <li>Limpieza de Base de datos: Renombrar y recodificar variables, tratamiento de valores faltantes (missing values/ NA´s)</li>
 <li>Seleccionar variables, ordenar y agrupar la base de datos para realizar cálculos</li>
@@ -416,38 +430,85 @@ summary {
 <li>Ejercicios prácticos para aplicar lo expuesto: Replicar Informe Técnico de Mercado de Trabajo (EPH-INDEC)</li>
 <li>Cálculo de tasas básicas del mercado de trabajo (tasa de actividad, empleo, desempleo, entre otras)</li>
 <li>Cálculo de tasas para distintos subconjuntos poblacionales (por aglomerado, sexo, grupos de edad)</li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 4 - Variables de ingresos y gráficos:</a></p>
 <ul>
+<li>Temas de clase:
+<ul>
 <li>Procesamiento de indicadores agregados sobre las variables de ingresos (Ingresos laborales, no laborales, de ocupación principal, total familiar)</li>
 <li>Gráficos básicos de R (función “plot”): Comandos para la visualización ágil de la información</li>
-<li>Gráficos elaborados en R (función “ggplot”): o Gráficos de línea, barras, Boxplots y distribuciones de densidad o Parámetros de los gráficos: Leyendas, ejes, títulos, notas, colores o Gráficos con múltiples cruces de variables.</li>
+<li>Gráficos elaborados en R (función “ggplot”):
+<ul>
+<li>Gráficos de línea, barras, Boxplots y distribuciones de densidad</li>
+<li>Parámetros de los gráficos: Leyendas, ejes, títulos, notas, colores</li>
+<li>Gráficos con múltiples cruces de variables.</li>
+</ul></li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
-<p>Clase 5: Cálculo de tasas de Pobreza e Indigencia.</p>
+<p><a href="link">Clase 5: Cálculo de tasas de Pobreza e Indigencia.</a></p>
+<ul>
+<li>Temas de clase:
 <ul>
 <li>Definición de la Canasta Básica Alimentaria y Canasta Básica Total</li>
 <li>Metodología del cálculo de pobreza por línea (para personas y hogares)</li>
 <li>Ejercicio de estimación de tasas de Pobreza e Indigencia</li>
 <li>Ejercicio de estimación de tasas de Pobreza e Indigencia para subgrupos poblacionales (Género, Edad, Regiones)</li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
-<p>Clase 6: Pool de Datos en Panel. Gráficos y Matrices de Transición.</p>
+<p><a href="link">Clase 6: Pool de Datos en Panel. Gráficos y Matrices de Transición.</a></p>
+<ul>
+<li>Temas de clase:
 <ul>
 <li>Metodología de trabajos en panel con EPH: (Esquema de rotación de la EPH, Variables para la identificación de los individuos en distintos períodos, Consistencias)</li>
 <li>Proceso para la construcción de paneles en R.</li>
 <li>Cálculo de Frecuencias de transiciones de estados (Categorías Ocupacionales, Situaciones de Pobreza/Indigencia)</li>
 <li>Gráficos de Transición de estados</li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 7: Documentación en R. Generación de reportes/informes.</a></p>
 <ul>
-<li>Manejo de las extensiones del software “Rmarkdown” y “RNotebook” para elaborar documentos de trabajo, presentaciones interactivas e informes: o Opciones para mostrar u ocultar código en los reportes o Definición de tamaño, títulos y formato con el cual se despliegan los gráficos y tablas en el informe o Caracteres especiales para incluir múltiples recursos en el texto del informe: Links a páginas web, notas al pie, enumeraciones, cambios en el formato de letra (tamaño, negrita, cursiva) o Código embebido en el texto para automatización de reportes</li>
+<li>Temas de clase:
+<ul>
+<li>Manejo de las extensiones del software “Rmarkdown” y “RNotebook” para elaborar documentos de trabajo, presentaciones interactivas e informes:
+<ul>
+<li>Opciones para mostrar u ocultar código en los reportes</li>
+<li>Definición de tamaño, títulos y formato con el cual se despliegan los gráficos y tablas en el informe</li>
+<li>Caracteres especiales para incluir múltiples recursos en el texto del informe: Links a páginas web, notas al pie, enumeraciones, cambios en el formato de letra (tamaño, negrita, cursiva)</li>
+<li>Código embebido en el texto para automatización de reportes</li>
+</ul></li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 8: Introducción a R Intermedio:</a></p>
 <ul>
-<li>Acercamiento a técnicas más sofisticadas en R, útiles para automatizar el procesamiento periódico de la información:</li>
+<li>Temas de clase:
+<ul>
+<li>Acercamiento a técnicas más sofisticadas en R, útiles para automatizar el procesamiento periódico de la información:
+<ul>
 <li>Estructuras de código condicionales</li>
 <li>Loops</li>
 <li>Creación de funciones a medida del usuario</li>
+</ul></li>
 <li>Herramientas para continuar el aprendizaje en R: Foros reconocidos de usuarios de R. Comunidades donde se comparten conocimientos, experiencias, consultas. Comandos para acceder a los documentos de ayuda.</li>
+</ul></li>
+<li><a href="link">Notas de clase</a></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 9: Trabajos prácticos: R en concreto / examen</a></p>
 <ul>
