links de clases 4

--- a/README.html
+++ b/README.html
@@ -397,7 +397,6 @@ summary {
 <li>Definiciones de las principales variables de interés a abordar en el curso: Condición de actividad, categoría ocupacional, precariedad y pobreza</li>
 <li>Metodología usuaria de las Bases de microdatos. Utilización del Diseño de Registro.</li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
 <li><a href="link">Script</a></li>
 <li><a href="link">Ejercicios</a></li>
 </ul>
@@ -413,11 +412,10 @@ summary {
 <li>Tipos de variable (numérica, de caracteres, lógicas)</li>
 <li>Lectura y Escritura de Archivos</li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
 <li><a href="link">Script</a></li>
 <li><a href="link">Ejercicios</a></li>
 </ul>
-<p><a href="link">Clase 3 – Trabajando con bases de datos y Mercado de Trabajo:</a></p>
+<p><a href="(Clases/Clase%203%20-%20Tidyverse%20-%20Tasas%20basicas/Clase%203%20-%20Bases%20de%20Datos%20y%20Mercado%20de%20Trabajo.nb.html)">Clase 3 – Trabajando con bases de datos y Mercado de Trabajo:</a></p>
 <ul>
 <li>Temas de clase:
 <ul>
@@ -431,9 +429,8 @@ summary {
 <li>Cálculo de tasas básicas del mercado de trabajo (tasa de actividad, empleo, desempleo, entre otras)</li>
 <li>Cálculo de tasas para distintos subconjuntos poblacionales (por aglomerado, sexo, grupos de edad)</li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
-<li><a href="link">Script</a></li>
-<li><a href="link">Ejercicios</a></li>
+<li><a href="Clases/Clase%203%20-%20Tidyverse%20-%20Tasas%20basicas/Clase%203%20-%20Bases%20de%20Datos%20y%20Mercado%20de%20Trabajo.R">Script</a></li>
+<li><a href="Clases/Clase%203%20-%20Tidyverse%20-%20Tasas%20basicas/Ejercicios%20-%20Clase%203.R">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 4 - Variables de ingresos y gráficos:</a></p>
 <ul>
@@ -448,11 +445,10 @@ summary {
 <li>Gráficos con múltiples cruces de variables.</li>
 </ul></li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
 <li><a href="link">Script</a></li>
 <li><a href="link">Ejercicios</a></li>
 </ul>
-<p><a href="link">Clase 5: Cálculo de tasas de Pobreza e Indigencia.</a></p>
+<p><a href="Clase%205%20-%20Graficos%20y%20Distribucion%20del%20Ingreso/Clase%205-%20Graficos%20e%20Ingresos.nb.html">Clase 5: Cálculo de tasas de Pobreza e Indigencia.</a></p>
 <ul>
 <li>Temas de clase:
 <ul>
@@ -461,9 +457,8 @@ summary {
 <li>Ejercicio de estimación de tasas de Pobreza e Indigencia</li>
 <li>Ejercicio de estimación de tasas de Pobreza e Indigencia para subgrupos poblacionales (Género, Edad, Regiones)</li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
-<li><a href="link">Script</a></li>
-<li><a href="link">Ejercicios</a></li>
+<li><a href="Clase%205%20-%20Graficos%20y%20Distribucion%20del%20Ingreso/Clase%205-%20Graficos%20e%20Ingresos.R">Script</a></li>
+<li><a href="Clase%205%20-%20Graficos%20y%20Distribucion%20del%20Ingreso/Ejercicios%20-%20Clase%205.R">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 6: Pool de Datos en Panel. Gráficos y Matrices de Transición.</a></p>
 <ul>
@@ -474,7 +469,6 @@ summary {
 <li>Cálculo de Frecuencias de transiciones de estados (Categorías Ocupacionales, Situaciones de Pobreza/Indigencia)</li>
 <li>Gráficos de Transición de estados</li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
 <li><a href="link">Script</a></li>
 <li><a href="link">Ejercicios</a></li>
 </ul>
@@ -490,11 +484,10 @@ summary {
 <li>Código embebido en el texto para automatización de reportes</li>
 </ul></li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
 <li><a href="link">Script</a></li>
 <li><a href="link">Ejercicios</a></li>
 </ul>
-<p><a href="link">Clase 8: Introducción a R Intermedio:</a></p>
+<p><a href="https://guidowe.github.io/Curso-R-Flacso/Clase%208%20-%20Programacion%20funcional/Clase_8-Programacion%20funcional.nb.html">Clase 8: Introducción a R Intermedio:</a></p>
 <ul>
 <li>Temas de clase:
 <ul>
@@ -506,9 +499,8 @@ summary {
 </ul></li>
 <li>Herramientas para continuar el aprendizaje en R: Foros reconocidos de usuarios de R. Comunidades donde se comparten conocimientos, experiencias, consultas. Comandos para acceder a los documentos de ayuda.</li>
 </ul></li>
-<li><a href="link">Notas de clase</a></li>
-<li><a href="link">Script</a></li>
-<li><a href="link">Ejercicios</a></li>
+<li><a href="https://guidowe.github.io/Curso-R-Flacso/Clase%208%20-%20Programacion%20funcional/Clase_8-Programacion%20funcional.R">Script</a></li>
+<li><a href="https://guidowe.github.io/Curso-R-Flacso/Clase%208%20-%20Programacion%20funcional/Ejercicios%20Clase%208_Programacion%20funcional.R">Ejercicios</a></li>
 </ul>
 <p><a href="link">Clase 9: Trabajos prácticos: R en concreto / examen</a></p>
 <ul>
