--- a/Clase 1 - Conceptos Principales de EPH/Presentacion_xaringan.html
+++ b/Clase 1 - Conceptos Principales de EPH/Presentacion_xaringan.html
@@ -24,7 +24,7 @@ class: inverse, middle, center
 ---
 class: middle, center
 
-background-image: url(https://raw.githubusercontent.com/Guidowe/Curso-R-Flacso/master/Clase%201%20-%20Conceptos%20Principales%20de%20EPH/Marco%20analitico_conceptual%20EPH.png)
+background-image: url(https://raw.githubusercontent.com/Guidowe/Curso-R-Flacso/master/Clase%201%20-%20Conceptos%20Principales%20de%20EPH/Marco%20analitico_conceptual%20EPH.jpg)
 background-size: contain
 
 
