arreglo mezcla clases 4 y 5

--- a/README.html
+++ b/README.html
@@ -377,77 +377,149 @@ $(document).ready(function () {
 </div>
 
 
-<div id="r-en-flacso-2019" class="section level1">
-<h1>R en FLACSO 2019</h1>
-<div id="notas-de-clase" class="section level2">
-<h2>Notas de Clase:</h2>
-<div id="clase-1---conceptos-principales-de-eph" class="section level4">
-<h4>Clase 1 - Conceptos principales de EPH</h4>
-<ul>
-<li><a href>Notebook</a></li>
-<li><a href>Script</a></li>
-<li><a href>Ejercicios</a></li>
-</ul>
+<div id="programa-y-materiales-de-cursada" class="section level1">
+<h1>Programa y materiales de cursada</h1>
+<hr />
+<blockquote>
+<p>Docentes: Pablo Tiscornia - Guido Weksler - Diego Kozlowski - Natsumi Shokida.</p>
+</blockquote>
+<div id="presentacion" class="section level3">
+<h3>Presentación</h3>
+<p>En los últimos años se han difundido muchas herramientas estadísticas novedosas para el análisis de información socioeconómica. En particular el software denominado “R”, por tratarse de un software libre, se extiende cada vez más en diferentes disciplinas y recibe el aporte de investigadores e investigadoras en todo el mundo, multiplicando sistemáticamente sus capacidades.</p>
+<p>Este programa se destaca, entre varias cosas, por su capacidad de trabajar con grandes volúmenes de información, utilizar múltiples bases de datos en simultáneo, generar reportes, realizar gráficos a nivel de publicación y por su comunidad de usuarios y usuarias que publican sus sintaxis y comparten sus problemas, hecho que potencia la capacidad de consulta y de crecimiento. A su vez, la expresividad del lenguaje permite diseñar funciones específicas que permiten optimizar de forma personalizada el trabajo cotidiano con R.</p>
+<hr />
 </div>
-<div id="clase-2---r-base" class="section level4">
-<h4>Clase 2 - R base</h4>
-<ul>
-<li><a href>Notebook</a></li>
-<li><a href>Script</a></li>
-<li><a href>Ejercicios</a></li>
-</ul>
+<div id="objetivos-del-curso" class="section level3">
+<h3>Objetivos del curso</h3>
+<p>El presente Taller tiene como objetivo principal introducirse en el aprendizaje del lenguaje de programación “R” aplicado procesamiento de la Encuesta Permanente de Hogares (EPH) - INDEC. Se apunta a brindar a los y las participantes herramientas prácticas para el procesamiento de datos haciendo énfasis en la producción y el análisis de estadísticas socioeconómicas en pos de abrir puertas para realizar investigaciones propias sobre diversas temáticas relacionadas al mercado de trabajo y las condiciones de vida de la población.</p>
+<p>La Encuesta Permanente de Hogares será la base de datos de aplicación elegida para el curso, dado que representa un insumo fundamental para realizar estudios sobre el mercado de trabajo y las condiciones de vida de la población. Se hará una introducción a los lineamientos conceptuales principales de la encuesta, en pos de que los y las participantes puedan abordar con datos distintas problemáticas vinculadas al mercado de trabajo y las condiciones de vida de la población.</p>
+<hr />
 </div>
-<div id="clase-3---tidyverse---tasas-del-mercado-de-trabajo" class="section level4">
-<h4>Clase 3 - Tidyverse - Tasas del mercado de trabajo</h4>
+<div id="clases-y-contenido" class="section level3">
+<h3>Clases y contenido</h3>
+<p><a href="https://pablotis.github.io/Presentaciones/index.html#1">Clase 1 - Conceptos Principales de EPH:</a></p>
 <ul>
-<li><a href="Clase%203%20-%20Tidyverse%20-%20Tasas%20basicas/Clase%203%20-%20Bases%20de%20Datos%20y%20Mercado%20de%20Trabajo.nb.html">Notebook</a></li>
+<li>Temas de clase:
+<ul>
+<li>Presentación del curso.</li>
+<li>Presentación de la Encuesta Permanente de Hogares: Lineamientos conceptuales y metodología</li>
+<li>Abordaje del marco teórico y analítico de la EPH y sus aplicaciones prácticas.</li>
+<li>Síntesis del operativo de campo, cobertura y periodicidad de la Encuesta</li>
+<li>Definiciones de las principales variables de interés a abordar en el curso: Condición de actividad, categoría ocupacional, precariedad y pobreza</li>
+<li>Metodología usuaria de las Bases de microdatos. Utilización del Diseño de Registro.</li>
+</ul></li>
+<li><a href="https://pablotis.github.io/Presentaciones/index.html#115">Ejercicios</a></li>
+</ul>
+<p><a href="link">Clase 2 – Introduciendo a R:</a></p>
+<ul>
+<li>Temas de clase:
+<ul>
+<li>Descripción del programa “R”. Lógica sintáctica del lenguaje y comandos básicos</li>
+<li>Presentación de la plataforma RStudio para trabajar en “R”</li>
+<li>Caracteres especiales en “R”</li>
+<li>Operadores lógicos y aritméticos</li>
+<li>Definición de Objetos: Valores, Vectores y DataFrames</li>
+<li>Tipos de variable (numérica, de caracteres, lógicas)</li>
+<li>Lectura y Escritura de Archivos</li>
+</ul></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
+</ul>
+<p><a href="Clase%203%20-%20Tidyverse%20-%20Tasas%20basicas/Clase%203%20-%20Bases%20de%20Datos%20y%20Mercado%20de%20Trabajo.nb.html">Clase 3 – Trabajando con bases de datos y Mercado de Trabajo:</a></p>
+<ul>
+<li>Temas de clase:
+<ul>
+<li>Limpieza de Base de datos: Renombrar y recodificar variables, tratamiento de valores faltantes (missing values/ NA´s)</li>
+<li>Seleccionar variables, ordenar y agrupar la base de datos para realizar cálculos</li>
+<li>Creación de nuevas variables</li>
+<li>Aplicar filtros sobre la base de datos</li>
+<li>Construir medidas de resumen de la información</li>
+<li>Tratamiento de variables numéricas (edad, ingresos, horas de trabajo, cantidad de hijos / componentes del hogar, entre otras).</li>
+<li>Ejercicios prácticos para aplicar lo expuesto: Replicar Informe Técnico de Mercado de Trabajo (EPH-INDEC)</li>
+<li>Cálculo de tasas básicas del mercado de trabajo (tasa de actividad, empleo, desempleo, entre otras)</li>
+<li>Cálculo de tasas para distintos subconjuntos poblacionales (por aglomerado, sexo, grupos de edad)</li>
+</ul></li>
 <li><a href="Clase%203%20-%20Tidyverse%20-%20Tasas%20basicas/Clase%203%20-%20Bases%20de%20Datos%20y%20Mercado%20de%20Trabajo.R">Script</a></li>
 <li><a href="Clase%203%20-%20Tidyverse%20-%20Tasas%20basicas/Ejercicios%20-%20Clase%203.R">Ejercicios</a></li>
 </ul>
-</div>
-<div id="clase-4---tidyverse---pobreza" class="section level4">
-<h4>Clase 4 - Tidyverse - Pobreza</h4>
+<p><a href="link">Clase 4: Cálculo de tasas de Pobreza e Indigencia.</a></p>
 <ul>
-<li><a href>Notebook</a></li>
-<li><a href>Script</a></li>
-<li><a href>Ejercicios</a></li>
+<li>Temas de clase:
+<ul>
+<li>Definición de la Canasta Básica Alimentaria y Canasta Básica Total</li>
+<li>Metodología del cálculo de pobreza por línea (para personas y hogares)</li>
+<li>Ejercicio de estimación de tasas de Pobreza e Indigencia</li>
+<li>Ejercicio de estimación de tasas de Pobreza e Indigencia para subgrupos poblacionales (Género, Edad, Regiones)</li>
+</ul></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
-</div>
-<div id="clase-5---graficos-y-distribucion-del-ingreso" class="section level4">
-<h4>Clase 5 - Gráficos y Distribución del Ingreso</h4>
+<p><a href="Clase%205%20-%20Graficos%20y%20Distribucion%20del%20Ingreso/Clase%205-%20Graficos%20e%20Ingresos.nb.html">Clase 5 - Variables de ingresos y gráficos:</a></p>
 <ul>
-<li><a href="Clase%205%20-%20Graficos%20y%20Distribucion%20del%20Ingreso/Clase%205-%20Graficos%20e%20Ingresos.nb.html">Notebook</a></li>
+<li>Temas de clase:
+<ul>
+<li>Procesamiento de indicadores agregados sobre las variables de ingresos (Ingresos laborales, no laborales, de ocupación principal, total familiar)</li>
+<li>Gráficos básicos de R (función “plot”): Comandos para la visualización ágil de la información</li>
+<li>Gráficos elaborados en R (función “ggplot”):
+<ul>
+<li>Gráficos de línea, barras, Boxplots y distribuciones de densidad</li>
+<li>Parámetros de los gráficos: Leyendas, ejes, títulos, notas, colores</li>
+<li>Gráficos con múltiples cruces de variables.</li>
+</ul></li>
+</ul></li>
 <li><a href="Clase%205%20-%20Graficos%20y%20Distribucion%20del%20Ingreso/Clase%205-%20Graficos%20e%20Ingresos.R">Script</a></li>
 <li><a href="Clase%205%20-%20Graficos%20y%20Distribucion%20del%20Ingreso/Ejercicios%20-%20Clase%205.R">Ejercicios</a></li>
 </ul>
-</div>
-<div id="clase-6---paneles" class="section level4">
-<h4>Clase 6 - Paneles</h4>
+<p><a href="link">Clase 6: Pool de Datos en Panel. Gráficos y Matrices de Transición.</a></p>
 <ul>
-<li><a href>Notebook</a></li>
-<li><a href>Script</a></li>
-<li><a href>Ejercicios</a></li>
-</ul>
-</div>
-<div id="clase-7---markdown" class="section level4">
-<h4>Clase 7 - Markdown</h4>
+<li>Temas de clase:
 <ul>
-<li><a href>Notebook</a></li>
-<li><a href>Script</a></li>
-<li><a href>Ejercicios</a></li>
+<li>Metodología de trabajos en panel con EPH: (Esquema de rotación de la EPH, Variables para la identificación de los individuos en distintos períodos, Consistencias)</li>
+<li>Proceso para la construcción de paneles en R.</li>
+<li>Cálculo de Frecuencias de transiciones de estados (Categorías Ocupacionales, Situaciones de Pobreza/Indigencia)</li>
+<li>Gráficos de Transición de estados</li>
+</ul></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
-</div>
-<div id="clase-8---r-intermedio" class="section level4">
-<h4>Clase 8 - R intermedio</h4>
+<p><a href="link">Clase 7: Documentación en R. Generación de reportes/informes.</a></p>
 <ul>
-<li><a href>Notebook</a></li>
-<li><a href>Script</a></li>
-<li><a href>Ejercicios</a></li>
+<li>Temas de clase:
+<ul>
+<li>Manejo de las extensiones del software “Rmarkdown” y “RNotebook” para elaborar documentos de trabajo, presentaciones interactivas e informes:
+<ul>
+<li>Opciones para mostrar u ocultar código en los reportes</li>
+<li>Definición de tamaño, títulos y formato con el cual se despliegan los gráficos y tablas en el informe</li>
+<li>Caracteres especiales para incluir múltiples recursos en el texto del informe: Links a páginas web, notas al pie, enumeraciones, cambios en el formato de letra (tamaño, negrita, cursiva)</li>
+<li>Código embebido en el texto para automatización de reportes</li>
+</ul></li>
+</ul></li>
+<li><a href="link">Script</a></li>
+<li><a href="link">Ejercicios</a></li>
 </ul>
-</div>
+<p><a href="Clase%208%20-%20Programacion%20funcional/Clase_8-Programacion%20funcional.nb.html">Clase 8: Introducción a R Intermedio:</a></p>
+<ul>
+<li>Temas de clase:
+<ul>
+<li>Acercamiento a técnicas más sofisticadas en R, útiles para automatizar el procesamiento periódico de la información:
+<ul>
+<li>Estructuras de código condicionales</li>
+<li>Loops</li>
+<li>Creación de funciones a medida del usuario</li>
+</ul></li>
+<li>Herramientas para continuar el aprendizaje en R: Foros reconocidos de usuarios de R. Comunidades donde se comparten conocimientos, experiencias, consultas. Comandos para acceder a los documentos de ayuda.</li>
+</ul></li>
+<li><a href="Clase%208%20-%20Programacion%20funcional/Clase_8-Programacion%20funcional.R">Script</a></li>
+<li><a href="Clase%208%20-%20Programacion%20funcional/Ejercicios%20Clase%208_Programacion%20funcional.R">Ejercicios</a></li>
+</ul>
+<p><a href="link">Clase 9: Trabajos prácticos: R en concreto / examen</a></p>
+<ul>
+<li>Se presentará a los/as alumnos/as problemas concretos vinculados a la EPH y en relación a las experiencias que se fueron volcando a lo largo de la cursada. Se deberán abordar mediante el uso de R, aplicando lo aprendido en los módulos anteriores. En conjunto se expondrán los desafíos que emergen en el momento y la evaluación de las herramientas adecuadas para su abordaje y resolución. Entre los temas giran aquellos vinculados a la distribución personal del ingreso/Construcción de percentiles de ingreso; el mercado laboral a través de la herramienta Panel de datos; la documentación en R (Estilo de Notas de Clase).</li>
+<li>Espacio para consultas puntuales sobre los temas vistos durante el curso y presentación del trabajo final a entregar.</li>
+</ul>
 <div id="librerias-a-instalar" class="section level4">
 <h4>Librerias a instalar</h4>
-<pre><code>install.packages(c(&quot;tidyverse&quot;,&quot;openxlsx&quot;,'ggplot2','ggthemes', 'ggrepel','ggalt','kableExtra','GGally','ggridges',))</code></pre>
+<pre><code>install.packages(c(&quot;tidyverse&quot;,&quot;openxlsx&quot;,'ggplot2','ggthemes', 'ggrepel','ggalt','kableExtra','GGally','ggridges','fs','purrr','rmarkdown'))</code></pre>
 </div>
 </div>
 </div>
