arreglo clase graficos

--- a/Clase 5 - Graficos y Distribucion del Ingreso/Clase 5- Graficos e Ingresos.nb.html
+++ b/Clase 5 - Graficos y Distribucion del Ingreso/Clase 5- Graficos e Ingresos.nb.html
@@ -3006,14 +3006,12 @@ ruta_archivo</code></pre>
 <!-- rnb-output-begin eyJkYXRhIjoiWzFdIFwiLi4vUmVzdWx0YWRvcy9ncmFmaWNvMS5QTkdcIlxuIn0= -->
 <pre><code>[1] &quot;../Resultados/grafico1.PNG&quot;</code></pre>
 <!-- rnb-output-end -->
-<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxucG5nKHJ1dGFfYXJjaGl2bylcbnBsb3QoaXJpcyRTZXBhbC5MZW5ndGgsdHlwZSA9IFwiYlwiKVxuZGV2Lm9mZigpXG5gYGAifQ== -->
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxucG5nKHJ1dGFfYXJjaGl2bylcbnBsb3QoaXJpcyRTZXBhbC5MZW5ndGgsdHlwZSA9IFwiYlwiKVxuYGBgIn0= -->
 <pre class="r"><code>png(ruta_archivo)
-plot(iris$Sepal.Length,type = &quot;b&quot;)
-dev.off()</code></pre>
+plot(iris$Sepal.Length,type = &quot;b&quot;)</code></pre>
 <!-- rnb-source-end -->
-<!-- rnb-output-begin eyJkYXRhIjoibnVsbCBkZXZpY2UgXG4gICAgICAgICAgMSBcbiJ9 -->
-<pre><code>null device 
-          1 </code></pre>
+<!-- rnb-output-begin eyJkYXRhIjoiRXJyb3IgaW4gcGxvdC5uZXcoKSA6IGNvdWxkIG5vdCBvcGVuIGZpbGUgJy4uL1Jlc3VsdGFkb3MvZ3JhZmljbzEuUE5HJ1xuIn0= -->
+<pre><code>Error in plot.new() : could not open file '../Resultados/grafico1.PNG'</code></pre>
 <!-- rnb-output-end -->
 <!-- rnb-chunk-end -->
 <!-- rnb-text-begin -->
