arreglo bug readme

--- a/README.html
+++ b/README.html
@@ -454,7 +454,7 @@ summary {
 </ul></li>
 </ul></li>
 <li><a href="Clase%205%20-%20Graficos_I/05_explicacion.nb.html">Explicación</a></li>
-<li><a href="Clase%205%20-%20Graficos_I/05_practica_independiente.nb.nb.html">Práctica independiente</a></li>
+<li><a href="Clase%205%20-%20Graficos_I/05_practica_independiente.nb.html">Práctica independiente</a></li>
 </ul>
 <p><strong>Clase 6 - Visualización de la información II</strong></p>
 <ul>
@@ -466,7 +466,7 @@ summary {
 <li>Treemaps</li>
 </ul></li>
 <li><a href="Clase%206%20-%20Graficos_II/06_explicacion.nb.html">Explicación</a></li>
-<li><a href="Clase%206%20-%20Graficos_II/06_practica_independiente.nb.nb.html">Práctica independiente</a></li>
+<li><a href="Clase%206%20-%20Graficos_II/06_practica_independiente.nb.html">Práctica independiente</a></li>
 </ul>
 <p><a href="Clase%207%20-%20Markdown/Clase%207.%20Markdown.nb.html">Clase 7: Documentación en R. Generación de reportes/informes.</a></p>
 <ul>
