agrego clase 6: Modelo Lineal

--- a/README.html
+++ b/README.html
@@ -469,17 +469,20 @@ summary {
 <li><a href="Clase%205%20-%20Graficos/05_practica_independiente.nb.html">Práctica independiente</a></li>
 </ul>
 <p><br></p>
-<p><strong>Clase 6 - Visualización de la información II</strong></p>
+<p><strong>Clase 6 - Correlación y Modelo Lineal</strong></p>
 <ul>
 <li>Temas de clase:
 <ul>
-<li>Gráficos de ingresos</li>
-<li>Kernels</li>
-<li>Suavizado estadístico</li>
-<li>Treemaps</li>
+<li>Covarianza</li>
+<li>Correlación</li>
+<li>Regresión lineal simple</li>
+<li>Regresión lineal múltiple</li>
+<li>Ingeniería de variables</li>
+<li>Transformaciones log-lineales</li>
 </ul></li>
-<li><a href="Clase%206%20-%20Graficos_II/06_explicacion.nb.html">Explicación</a></li>
-<li><a href="Clase%206%20-%20Graficos_II/06_practica_independiente.nb.html">Práctica independiente</a></li>
+<li><a href="Clase%206%20-%20Modelo-lineal/06_explicacion.nb.html">Explicación</a></li>
+<li><a href="Clase%206%20-%20Modelo-lineal/06_practica_guiada.nb.html">Práctica Guiada</a></li>
+<li><a href="Clase%206%20-%20Modelo-lineal/ejercicios_modelo_lineal">Pŕactica independiente</a></li>
 </ul>
 <p><br></p>
 <p><strong>Clase 7: Documentación en R. Generación de reportes/informes.</strong></p>
