--- a/Clase 2 - R Base/Clase 2 - Presentacion de R.html
+++ b/Clase 2 - R Base/Clase 2 - Presentacion de R.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Introducción a R</title>
     <meta charset="utf-8" />
@@ -23,23 +23,43 @@ class: middle, center
 ---
 class: middle, center, inverse
 
-background-image: url(https://raw.githubusercontent.com/Guidowe/Curso-R-Flacso/master/Clase%202%20-%20R%20Base/r_miedo.jpg)
+background-image: url(img/r_miedo.jpg)
 background-size: contain
+
+---
+class: inverse, center
+
+# R es...
+ 
+Libre (con licencia no paga)
+
+&lt;img src="img/softwarelibre.png" width="80%" style="display: block; margin: auto;" /&gt;
+
+---
+class: inverse, center
+
+# R es...
+
+Abierto
+
+&lt;img src="img/r_software_abierto.jpg" width="80%" style="display: block; margin: auto;" /&gt;
 
 ---
 class: inverse
 
 # R es...
+&lt;br&gt;
 
-&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
-  
-- Un software libre y abierto
-  
 - Un lenguaje para el procesamiento y análisis de datos
   
-- Su sintáxis básica es conocida como "R base"
+&lt;br&gt;
   
-- Sobre esa base se desarrollan un conjunto de funciones y paquetes que incluso pueden cambiar ciertas formas de programar el código
+- El lenguaje troncal es conocido como "R base"
+  
+&lt;br&gt;
+  
+- Sobre esa base se desarrollan un conjunto de funciones y paquetes que incluso pueden cambiar ciertas formas de programar el mismo lenguaje
+  
   
 ---
 class: middle, center, inverse
@@ -83,12 +103,48 @@ class: inverse
 
 ## ¿Por qué R?
 
+&lt;br&gt;&lt;br&gt;
 
-- Con el ambiente de trabajo RStudio se pueden tratar los datos, visualizar los resultados, analizarlos y presentarlos
+- Permite sistematizar tareas repetitivas
+
+&lt;br&gt;
+
+--
+
+- Permite crear funciones a medida
+
+&lt;br&gt;
+
+--
+
+- Garantiza la reproductibilidad y la estandarización de procesos
+
+&lt;br&gt;
+
+--
+
+- Destina más memoria al funcionamiento que a la plataforma (vs SPSS o SAS, por ejemplo)
+
+&lt;br&gt;
+
+---
+class: inverse
+
+## ¿Por qué R?
 
 - Su comunidad potencia la capacidad de consulta y respuesta
 
-&lt;img src="img/r_ayuda.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+&lt;img src="img/r_ayuda.png" width="70%" style="display: block; margin: auto;" /&gt;
+
+---
+class: inverse
+
+## ¿Por qué R?
+
+- Consultas sobre los programas estadísticos en Google
+  
+&lt;img src="img/google_trend.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 class: inverse
@@ -97,43 +153,33 @@ class: inverse
 
 - Sus gráficos son flexibles y con calidad de publicación
 
-.pull-left[
-![](img/grafico_ingresos.jpg)]
-
-.pull-right[
-![](img/grafico_cap_inst.png)]
-
+&lt;img src="img/grafico_ingresos.jpg" width="90%" style="display: block; margin: auto;" /&gt;
 
 ---
 class: inverse
 
 ## ¿Por qué R?
-  
-- Su potencia aumenta significativamente a medida que usuarixs, investigadorxs, institutos, organizaciones y empresas privadas "crean" y, sobre todo, publican funciones específicas para problemas particulares.
+
+&lt;img src="img/grafico_cap_inst.png" width="60%" style="display: block; margin: auto;" /&gt;
+
+---
+class: inverse
+
+## ¿Por qué R?
   
 - Para el año 2019 se publicaron más de 16.000 paquetes "oficiales" en CRAN
 
-&lt;img src="https://gist.githubusercontent.com/daroczig/3cf06d6db4be2bbe3368/raw/b66b0531fb1b86d3e04a003b2e105ad4f147900e/number-of-submitted-packages-to-CRAN.png" width="80%" style="display: block; margin: auto;" /&gt;
+&lt;img src="https://gist.githubusercontent.com/daroczig/3cf06d6db4be2bbe3368/raw/b66b0531fb1b86d3e04a003b2e105ad4f147900e/number-of-submitted-packages-to-CRAN.png" width="110%" style="display: block; margin: auto;" /&gt;
   fuente: [Gergely Daróczi](https://blog.revolutionanalytics.com/2017/01/cran-10000.html)
 
----
-class: inverse
-
-## ¿Por qué R?
-
-
-- Consultas sobre los programas estadísticos en Google
-  
-&lt;img src="img/google_trend.png" width="100%" style="display: block; margin: auto;" /&gt;
-
 
 ---
 
 class: inverse
 
-## R vs SPSS / STATA / SAS
+## R vs otros programas de licencia paga
 
-- R Es gratuito 
+- R Es gratuito (todas sus versiones, todas sus herramientas, todo el tiempo)
 
 --
 
@@ -141,7 +187,7 @@ class: inverse
 
 --
   
-- En STATA/ SPSS / SAS trabajas con lo disponible, en R podés crear herramientas en función de los problemas con los que te enfrentas
+- Con R se generó una comunidad dedicada a facilitar el acceso al lenguaje y, también, a su desarrollo (los "mortales" podemos crear herramientas en función de los problemas con los que nos enfrentamos).
 
 --
   
@@ -150,49 +196,56 @@ class: inverse
 --
   
 - Potencia: 
-    * Trabaja virtualmente
+    * no trabaja sobre objetos físicos
     * Totalmente automatizable
     * Interactua con otros lenguajes
 
 --
   
-- R te obliga a conocer más sobre tus datos, tus procesos y sobre estadística.
+- R te demanda mayor conocimiento sobre tus datos, tus procesos y también sobre estadística.
 
 ---
 class: middle, center
 
-# ¡Manos a la obra!
+# Manos a la obra
 
 ---
 class: inverse, middle
 
-  * Abramos el archivo _"curso R FLACSO"_, lo podemos identificar por el siguiente ícono &lt;img src="img/Rproject.png" width=5%&gt;
+## Rstudio
 
+&lt;br&gt;
 
+- Es el entorno más popular para trabajar con el lenguaje R.
 
-&lt;img src="img/abrir_proyecto.png" width="80%" style="display: block; margin: auto;" /&gt;
+&lt;br&gt;
 
----
-class: inverse, middle
+- Es una empresa que no cobra por el uso del programa, sí por el soporte.
 
-- Rstudio es uno de los entornos para utilizar el lenguaje R
+&lt;br&gt;
 
-&lt;img src="img/paso1.png" width="100%" style="display: block; margin: auto;" /&gt;
-
----
-class: inverse, middle
-
-  
-  1. Abramos la carpeta _"Clase 2 - R Base"_
-  
-  1. Dentro de ella, abramos el archivo _"Clase 2 - Introducción.html"_
-  
-  1. Luego vamos a _File/Archivo --&gt; New File/Nuevo archivo --&gt; R Notebook_
-  
-&lt;img src="img/paso2.png" width="80%" style="display: block; margin: auto;" /&gt;
+- Es también un traductor de R a diferentes lenguajes, lo que permite trabajar el dato, visualizar los resultados y generar reportes en diferentes formatos de salida (.doc, .xlsx., .pdf, presentaciones, dashboards, entre otros.), todo desde la misma plataforma
 
 ---
-class: inverse, middle
+class: inverse, center, middle
+
+.pull-left[
+
+## R:
+
+&lt;br&gt;
+
+&lt;img src="img/r_software_abierto.jpg" width="100%" style="display: block; margin: auto;" /&gt;
+]
+
+.pull-right[
+
+## RStudio:
+
+&lt;br&gt;
+
+&lt;img src="img/r_panel_rstudio.jpg" width="100%" style="display: block; margin: auto;" /&gt;
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -235,9 +288,25 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     deleted = true;
   });
-})();</script>
-
-<script>
+})();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
 (function() {
   var links = document.getElementsByTagName('a');
   for (var i = 0; i < links.length; i++) {
@@ -245,8 +314,7 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
       links[i].target = '_blank';
     }
   }
-})();
-</script>
+})();</script>
 
 <script>
 slideshow._releaseMath = function(el) {
